syntax = "proto3";

option go_package = "github.com/sjsafranek/gosync";

service GoSyncService {
  rpc Authenticate (stream Request) returns (stream Response) {}
  rpc GetFileDetails (Request) returns (Response) {}

  rpc UploadFile (stream Request) returns (Response) {}
  rpc DownloadFile (Request) returns (stream Response) {}
}

message FileDetails {
  string Filename = 1;
  string MD5Checksum = 2;
  int64 Size = 3;
}

message FileChunk {
  bytes Chunk = 1;
  int64 Offset = 2; 
}

message Request {
  FileDetails FileDetails = 1;
  FileChunk FileChunk = 2;
}

enum ResponseStatus {
  Ok = 0;
  Continue = 1;
  Error = 2;
}

message Response {
  ResponseStatus Status = 1;
  FileDetails FileDetails = 2;
  FileChunk FileChunk = 3;
}



